fixed products not aligned left

--- a/Views/Partials/Checkout/checkout.styling.css
+++ b/Views/Partials/Checkout/checkout.styling.css
@@ -5,14 +5,14 @@
 }
 
 .cards{
-    margin: 1rem auto;
-    margin-left: 1.8rem;
+    margin: 1rem;
 }
 
 #cart-items-container {
     width: 52%;
     min-width: 20rem;
     margin: auto;
+    margin-top:0;
     column-gap: 1rem;
 }
 
@@ -35,6 +35,7 @@
 }
 
 .total-container {
+    margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
 
@@ -59,6 +60,7 @@
 #form {
     margin: 0;
     margin-left: 3rem;
+    margin-bottom: 1rem;
     min-width: 25rem;
     height: 100%
 }
